[tool.poetry]
name = "rarity_search"
version = "0.1.0"
description = ""
authors = ["pratos <prathamesh@fnp.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
pandas = "^1.3.4"
rich = "^10.12.0"
loguru = "^0.5.3"
fastcore = "^1.3.27"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
commitizen = "^2.20.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
