[tool.poetry]
name = "rarity_search"
version = "0.1.0"
description = ""
authors = ["shodh_nft <info@shodh.co>"]
packages = [
  {include = "scripts/"},
  {include = "src/"}
]

[tool.poetry.scripts]
test = "scripts.test:test"
lint = "scripts.lint:lint"
fix = "scripts.lint:fix"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
pandas = "^1.3.4"
rich = "^10.12.0"
loguru = "^0.5.3"
fastcore = "^1.3.27"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
commitizen = "^2.20.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "0.1.0"
